--- a/graduatetracer/tracer/templates/tracer/systemadmin/sidebar.html
+++ b/graduatetracer/tracer/templates/tracer/systemadmin/sidebar.html
@@ -63,6 +63,13 @@
     <!-- Divider -->
     <hr class="sidebar-divider sticky">
 
+
+    <li class="nav-item sticky">
+        <a class="nav-link" href="{% url 'user' %}">
+            <i class="fas fa-users"></i>
+            <span>Graduates</span></a>
+    </li>
+
     <!-- Heading -->
     <!-- <div class="sidebar-heading sticky">
         Addons
