--- a/graduatetracer/tracer/templates/tracer/systemadmin/user.html
+++ b/graduatetracer/tracer/templates/tracer/systemadmin/user.html
@@ -8,10 +8,11 @@
     <div class="card shadow-sm mb-4">
       <div class="card-body bg-c-lite-green">
         <form>
+
           <div class="row">
             <div class="col-lg-10">
               <div class="form-outline mb-4">
-                <input type="search" class="form-control " name="query" placeholder="Name / Skills / Date Graduated / Status / Job Discription" aria-label="Search">
+                <input type="search" class="form-control " name="query" placeholder="Name / Skills / Date Graduated / Status / Job Description" aria-label="Search">
               </div>
             </div>
             <div class="col-lg-1">
@@ -22,51 +23,5 @@
       </div>
     </div>
     <div class="row">
-    {% for user_info in user_infos %}
-      {% if user_info.approved %}
-        <div class="col-sm-12 col-md-6 col-lg-4 col-xl-4 mby-1">
-          <div class="card shadow-sm">
-            <a class="card-link" href="{% url 'userinformations' user_info.id %}">
-              <div class="card-header bg-gradient-info text-center text-white">
-                <div class="mt-2">
-                  {% if user_info.profile_picture %}
-                    <img class="img-profile rounded-circle shadow-sm" src="{{user_info.profile_picture.url}}" width="100" height="90" alt="User-Profile-Image">
-                  {% endif %}
-                  <div class="mt-1">
-                    <p>{{user_info.first_name}} {{user_info.middle_name}} {{user_info.last_name}}</p>
-                    <p>{{user_info.email}}</p>
-                  </div>
-
-                </div>
-              </div>
-            </a>
-            <div class="card-body">
-              <div class="mt-2">
-                  <div class="col-sm-12">
-                    <p>Skills: {{user_info.skill}}</p>
-                  </div>
-                  <div class="col-sm-12">
-                    <p>Date Graduated: {{user_info.date_graduated}}</p>
-                  </div>
-                  {% if user_info.employed %}
-                  <div class="col-sm-12">
-                    <p>Status: <span class="text-success">Employed</span></p>
-                  </div>
-                  <div class="col-sm-12">
-                    <p>Job Description: {{ user_info.job_description }}</p>
-                  </div>
-                  {% elif user_info.unemployed%}
-                  <div class="col-sm-12">
-                    <p>Status: <span class="text-danger">Unemployed</span></p>
-                  </div>
-                  {% endif%}
-              </div>
-            </div>
-          </div>
-        </div>
-      {% endif %}
-    {% endfor %}
-    </div>
-  </div>
-
+        
 {% endblock %}
