--- a/graduatetracer/tracer/templates/tracer/user/post_list.html
+++ b/graduatetracer/tracer/templates/tracer/user/post_list.html
@@ -11,23 +11,12 @@
           <strong>ADD POST!</strong>
         </div>
         <div class="card-body">
-          <button
-            type="button "
-            class="btn btn-light btn-lg btn-block"
-            data-toggle="modal"
-            data-target=".bd-example-modal-lg"
-            style="border-radius: 12px"
-          >
+          <button type="button "class="btn btn-light btn-lg btn-block" data-toggle="modal" data-target=".bd-example-modal-lg" style="border-radius: 12px" >
             <h6><em> type something here...</em></h6>
           </button>
         </div>
         <div
-          class="modal fade bd-example-modal-lg"
-          tabindex="-1"
-          role="dialog"
-          aria-labelledby="myLargeModalLabel"
-          aria-hidden="true"
-        >
+          class="modal fade bd-example-modal-lg" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel"aria-hidden="true" >
           <div class="modal-dialog modal-lg">
             <div class="modal-content">
               <div class="row justify-content-center">
@@ -41,16 +30,8 @@
                     <form method="POST" enctype="multipart/form-data">
                       {% csrf_token %} {{ form | crispy }}
                       <div class="d-grid gap-2">
-                        <button class="btn btn-success btn-sm btn-block">
-                          POST</button
-                        ><br />
-                        <button
-                          type="button"
-                          class="btn btn-light btn-md"
-                          data-toggle="modal"
-                          data-target=".bd-example-modal-lg"
-                          style="float: right"
-                        >
+                        <button class="btn btn-success btn-sm btn-block">POST</button><br />
+                        <button type="button" class="btn btn-light btn-md" data-toggle="modal" data-target=".bd-example-modal-lg" style="float: right">
                           <strong>Cancel </strong>
                         </button>
                       </div>
@@ -65,86 +46,42 @@
     </div>
     <div class="row mt-3 w-100 m-auto">
       {% for post in post_list %}
-      <div
-        class="col-md-12 col-lg-12 col-sm-12 border-bottom position-relative"
-      >
+      <div class="col-md-12 col-lg-12 col-sm-12 border-bottom position-relative" >
         <div class="shadow p-3 mb-2 mb-0 bg-white rounded">
-          <div
-            class="card-header bg-trasparent border-none"
-            style="background-color: #fff"
-          >
-            <a
-              class="nav-link"
-              id="{% url 'DisplayGradInfo' %}"
-              href="{% url 'DisplayGradInfo' %}"
-            >
-              <img
-                class="img-profile rounded-circle"
-                src="{{request.user.profile_picture.url}}"
-                width=" 40"
-                height="40"
-                alt="User-Profile-Image"
-              />
-              <span class="mr-2 d-none d-lg-inline text-gray-700 small"><strong>{{user.first_name}} {{user.middle_name}} {{user.last_name}}</strong></span
-              >
+          <div class="card-header bg-trasparent border-none" style="background-color: #fff" >
+            <a class="nav-link" id="{% url 'DisplayGradInfo' %}" href="{% url 'DisplayGradInfo' %}">
+              <img class="img-profile rounded-circle" src="{{request.user.profile_picture.url}}" width=" 40" height="40" alt="User-Profile-Image"/>
+              <span class="mr-2 d-none d-lg-inline text-gray-700 small"><strong>{{user.first_name}} {{user.middle_name}} {{user.last_name}}</strong></span>
             </a>
             <div class="mt-0 text-dark">
               <font size="">{{ post.created_on }}</font>
             </div>
           </div>
-          <div
-            class="card-body"
-            style="background-color: #fff !important; color: black"
-          >
+          <div class="card-body" style="background-color: #fff !important; color: black">
             <p>{{ post.body }}</p>
             <div class="position-relative text-brown mt-1">
               {% if post.image %}
               <img src="{{ post.image.url }}" class="post-image" />
               {% endif %}
 
-              <a
-                href="{% url 'post-detail' post.pk %}"
-                class="stretched-link"
-              ></a>
+              <a href="{% url 'post-detail' post.pk %}" class="stretched-link"></a>
             </div>
           </div>
-          <div
-            class="card-footer bg-trasparent border-none"
-            style="background-color: fff"
-          >
+          <div class="card-footer bg-trasparent border-none" style="background-color: fff">
             <div class="d-flex flex-row">
               <form method="POST" action="{% url 'like' post.pk %}">
                 {% csrf_token %}
                 <input type="hidden" name="next" value="{{ request.path }}" />
                 <button
-                  style="
-                    background-color: lightgray;
-                    color: info;
-                    border-bottom-color: none;
-                    box-shadow: none;
-                  "
-                  type="submit"
-                >
-                  <i class="small fas fa-thumbs-up"
-                    ><span> {{ post.likes.all.count }} </span></i
-                  >
+                  style="background-color: lightgray; color: info; border-bottom-color: none; box-shadow: none; " type="submit">
+                  <i class="small fas fa-thumbs-up"><span> {{ post.likes.all.count }} </span></i>
                 </button>
               </form>
               <form method="POST" action="{% url 'dislike' post.pk %}">
                 {% csrf_token %}
                 <input type="hidden" name="next" value="{{ request.path }}" />
-                <button
-                  style="
-                    background-color: lightgray;
-                    color: info;
-                    border-bottom-color: none;
-                    box-shadow: none;
-                  "
-                  type="submit"
-                >
-                  <i class="small fas fa-thumbs-down"
-                    ><span> {{ post.dislikes.all.count }} </span></i
-                  >
+                <button style=" background-color: lightgray; color: info; border-bottom-color: none; box-shadow: none;" type="submit">
+                  <i class="small fas fa-thumbs-down"><span> {{ post.dislikes.all.count }} </span></i>
                 </button>
               </form>
             </div>
@@ -155,15 +92,8 @@
     </div>
   </div>
   <div class="col-lg-3">
-    <div
-      class="row justify-content-center text-content"
-      style="height: 100% !important; padding-bottom: none !important"
-    >
-      <ul
-        class="w-100 bg-gradient-light sidebar sidebar-dark accordion"
-        id="sidebnav-wrapper"
-        style="height: 100% !important; text-color: black"
-      >
+    <div class="row justify-content-center text-content" style="height: 100% !important; padding-bottom: none !important">
+      <ul class="w-100 bg-gradient-light sidebar sidebar-dark accordion" id="sidebnav-wrapper" style="height: 100% !important; text-color: rgb(3, 3, 3)">
         <div class="body">
           <li class="sidnav-brand">
             <strong>YOUR FRIENDS</strong>
@@ -174,20 +104,8 @@
 
           <li class="nav-item active">
             <a class="nav-link">
-              <img
-                class="img-profile rounded-circle shadow-sm"
-                src="{{grad_info.profile_picture.url}} "
-                width=" 50"
-                height="50"
-                alt="User-Profile-Image"
-              />
-              <span
-                id="{{ grad_info.id}}"
-                class="mr-2 d-none d-lg-inline text-gray-700 small"
-                data-toggle="modal"
-                data-target=".bd-example-modal-lg1"
-                ><strong>{{grad_info.email}}</strong></span
-              >
+              <img class="img-profile rounded-circle shadow-sm" src="{{grad_info.profile_picture.url}} " width=" 50" height="50" alt="User-Profile-Image"/>
+              <span id="{{ grad_info.IDNum}}" class="mr-2 d-none d-lg-inline text-gray-700 small" data-toggle="modal" data-target=".bd-example-modal-lg1"><strong>{{grad_info.email}}</strong></span>
             </a>
           </li>
                 {% endif %}
@@ -199,14 +117,7 @@
   </div>
 
   <!-- basic modal -->
-  <div
-    id="{{ grad_info.id}}"
-    class="modal fade bd-example-modal-lg1"
-    tabindex="-1"
-    role="dialog"
-    aria-labelledby="myLargeModalLabel"
-    aria-hidden="true"
-  >
+  <div id="{{ grad_info.IDNum}}" class="modal fade bd-example-modal-lg1" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
     <div class="modal-dialog modal-lg">
       <div class="modal-content">
         <form method="POST" action="">
@@ -215,19 +126,12 @@
             <div class="row">
               {% if users_info.profile_picture %}
               <div class="col-lg-2">
-                <img
-                  class="img-profile rounded-circle shadow-sm"
-                  src="{{user_info.profile_picture.url}}"
-                  width=" 50"
-                  height="50"
-                  alt="User-Profile-Image"
-                />
+                <img class="img-profile rounded-circle shadow-sm" src="{{user_info.profile_picture.url}}" width=" 50" height="50" alt="User-Profile-Image"/>
               </div>
               {% endif %}
               <div class="col-lg-10">
                 <p class="pt-3">
-                  {{grad_info.first_name}} {{grad_info.middle_name}}
-                  {{grad_info.last_name}}
+                  {{grad_info.first_name}} {{grad_info.middle_name}} {{grad_info.last_name}}
                 </p>
               </div>
             </div>
@@ -280,11 +184,7 @@
               </div>
             </div>
             <div class="modal-footer">
-              <button
-                type="button"
-                class="btn btn-primary"
-                data-dismiss="modal"
-              >
+              <button type="button" class="btn btn-primary" data-dismiss="modal">
                 Close
               </button>
             </div>
