--- a/graduatetracer/tracer/templates/tracer/systemadmin/school_record.html
+++ b/graduatetracer/tracer/templates/tracer/systemadmin/school_record.html
@@ -1,4 +1,4 @@
-{% extends 'tracer/adminreal/templates.html' %}
+{%  extends 'tracer/systemadmin/templates.html' %}
 {% block content %}
 
 <style media="screen">
@@ -42,6 +42,16 @@
             <h6 class="m-0 font-weight-bold text-white">GINATILAN SCHOOL REPORTS</h6>
         </div>
         <div class="card-body">
+            <div class="col-xs-6 col-sm-9 col-md-9 col-lg-3 col-xl-3 p-1">
+              <select id="query0" class="form-control" name="">
+                <option value="">Search Year Graduated</option>
+              {% for query in query_year_graduated %}
+                {% if query %}
+                <option value="{{query}}">{{query}}</option>
+                {% endif %}
+              {% endfor %}
+              </select>
+            </div>
             <div class="table-responsive">
                 <table id="datatables" class="table table-striped table-bordered" style="width:100%">
                     <thead>
