--- a/graduatetracer/tracer/templates/tracer/systemadmin/school_report.html
+++ b/graduatetracer/tracer/templates/tracer/systemadmin/school_report.html
@@ -1,4 +1,4 @@
-{% extends 'tracer/adminreal/templates.html' %}
+{%  extends 'tracer/systemadmin/templates.html' %}
 {% block content %}
 
 <style media="screen">
@@ -42,6 +42,16 @@
             <h6 class="m-0 font-weight-bold text-white">SCHOOL REPORTS</h6>
         </div>
         <div class="card-body">
+          <div style="position: right;"class="col-xs-3 col-sm-3 col-md-3 col-lg-3">
+            <select id="query0" class="form-control" name="">
+              <option value="">Job Name</option>
+            {% for query in query_title %}
+              {% if query %}
+              <option value="{{query}}">{{query}}</option>
+              {% endif %}
+            {% endfor %}
+            </select>
+          </div>
             <div class="table-responsive">
                 <table id="datatables" class="table table-striped table-bordered" style="width:100%">
                     <thead>
