--- a/graduatetracer/tracer/templates/tracer/user/post_list.html
+++ b/graduatetracer/tracer/templates/tracer/user/post_list.html
@@ -1,7 +1,8 @@
-{% extends 'tracer/user/template.html' %} 
-{% load crispy_forms_tags %} 
-{% load static %} 
+{% extends 'tracer/user/template.html' %}
+{% load crispy_forms_tags %}
+{% load static %}
 {% block content %}
+<link href="{% static 'css/Post-list.css' %}" rel="stylesheet">
 
 <div class="row">
   <div class="col-lg-9 mt-1">
@@ -95,55 +96,42 @@
     <div class="row justify-content-center text-content" style="height: 100% !important; padding-bottom: none !important">
       <ul class="w-100 bg-gradient-light sidebar sidebar-dark accordion" id="sidebnav-wrapper" style="height: 100% !important; text-color: rgb(3, 3, 3)">
         <div class="body">
-          <li class="sidnav-brand">
+
             <strong>YOUR FRIENDS</strong>
-            {% for grad_info in grad_infos %} 
+            {% for grad_info in grad_infos %}
             {% if grad_info.approved %}
              {% if grad_info.email != request.user.email %}
 
-          </li>
-
-          <li class="nav-item active">
-            <a class="nav-link">
-              <img class="img-profile rounded-circle shadow-sm" src="{{grad_info.profile_picture.url }} " width=" 50" height="50" alt="User-Profile-Image"/>
-              <span id="{{ grad_info.IDNum}}" class="mr-2 d-none d-lg-inline text-gray-700 small" data-toggle="modal" data-target=".bd-example-modal-lg1"><strong>{{grad_info.email}}</strong></span>
-            </a>
-          </li>
+                <li class="nav-item active">
+                  <a class="nav-link">
+                    <img class="img-profile rounded-circle shadow-sm" data-toggle="modal" data-target="#bd-example-modal-lg1{{grad_info.id}}" src="{{grad_info.profile_picture.url }} " width=" 50" height="50" alt="User-Profile-Image"/>
+                    <span id="{{ grad_info.IDNum}}" class="mr-2 d-none d-lg-inline text-gray-700 small" data-toggle="modal" data-target="#bd-example-modal-lg1{{grad_info.id}}"><strong>{{grad_info.email}}</strong></span>
+                  </a>
+                </li>
                 {% endif %}
-             {% endif %} 
+             {% endif %}
            {% endfor %}
         </div>
       </ul>
     </div>
   </div>
- 
+
   <!-- basic modal -->
-  <div id="{{ grad_info.IDNum}}" class="modal fade bd-example-modal-lg1" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
+  {% for grad_info in grad_infos %}
+  <div class="modal fade" id="bd-example-modal-lg1{{grad_info.id}}" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
     <div class="modal-dialog modal-lg">
       <div class="modal-content">
         <form method="POST" action="">
           {% csrf_token %}
           <div class="card-header text-white">
             <div class="row">
-              <!--{% if users_info.profile_picture %}
-              <div class="col-lg-2">
-                <img class="img-profile rounded-circle shadow-sm" src="{{user_info.profile_picture.url}}" width=" 50" height="50" alt="User-Profile-Image"/>
-              </div>
-              {% endif %}-->
-              <div class="col-lg-10">
-                <p class="pt-3">
-                  {{grad_info.first_name}} {{grad_info.middle_name}} {{grad_info.last_name}}
-                </p>
-              </div>
+                <img class="img-profile rounded-circle shadow-sm" src="{{grad_info.profile_picture}} " width=" 50" height="50" alt="User-Profile-Image"/>
+
+
             </div>
           </div>
-          {% if grad_info.email == grad_info.email %}
-          <div id="user.id" class="card-body">
-            {% for grad_info in grad_infos %} 
-            {% if grad_info.approved %}
-             {% if grad_info.email != request.user.email %}
-          
-          
+
+          <div  class="card-body">
               <div class="row">
                 <div class="col-sm-3">
                       <h6 class="mb-0">Name</h6>
@@ -158,7 +146,7 @@
                       <h6 class="mb-0">Email</h6>
                     </div>
                     <div class="col-sm-9 text-secondary">
-                      {{grad_info.email}} 
+                      {{grad_info.email}}
                     </div>
                   </div>
                   <hr>
@@ -167,7 +155,7 @@
                       <h6 class="mb-0">Phone</h6>
                     </div>
                     <div class="col-sm-9 text-secondary">
-                      {{grad_info.contact_number}} 
+                      {{grad_info.contact_number}}
                     </div>
                   </div>
                   <hr>
@@ -176,7 +164,7 @@
                       <h6 class="mb-0">ID Numbber</h6>
                     </div>
                     <div class="col-sm-9 text-secondary">
-                      {{grad_info.IDNum}} 
+                      {{grad_info.IDNum}}
                     </div>
                   </div>
                   <hr>
@@ -185,7 +173,7 @@
                       <h6 class="mb-0">Age</h6>
                     </div>
                     <div class="col-sm-9 text-secondary">
-                     {{grad_info.age}} 
+                     {{grad_info.age}}
                     </div>
                   </div>
                   <hr>
@@ -194,17 +182,17 @@
                       <h6 class="mb-0">Birthdate</h6>
                     </div>
                     <div class="col-sm-9 text-secondary">
-                     {{grad_info.birth_date}} 
+                     {{grad_info.birth_date}}
                     </div>
                   </div>
                   <hr>
-                  
+
                   <div class="row">
                     <div class="col-sm-3">
                       <h6 class="mb-0">Gender</h6>
                     </div>
                     <div class="col-sm-9 text-secondary">
-                     {{grad_info.gender}} 
+                     {{grad_info.gender}}
                     </div>
                   </div>
                   <hr>
@@ -213,7 +201,7 @@
                       <h6 class="mb-0">Address</h6>
                     </div>
                     <div class="col-sm-9 text-secondary">
-                     {{grad_info.address}} 
+                     {{grad_info.address}}
                     </div>
                   </div>
                     <hr>
@@ -222,7 +210,7 @@
                       <h6 class="mb-0">Course</h6>
                     </div>
                     <div class="col-sm-9 text-secondary">
-                     {{grad_info.course_type}} 
+                     {{grad_info.course_type}}
                     </div>
                   </div>
                     <hr>
@@ -231,7 +219,7 @@
                       <h6 class="mb-0">Status</h6>
                     </div>
                     <div class="col-sm-9 text-secondary">
-                     {{grad_info.employment_status}} 
+                     {{grad_info.employment_status}}
                     </div>
                   </div>
                       <hr>
@@ -240,7 +228,7 @@
                       <h6 class="mb-0">Job Description</h6>
                     </div>
                     <div class="col-sm-9 text-secondary">
-                     {{grad_info.job_description}} 
+                     {{grad_info.job_description}}
                     </div>
                   </div>
                     <hr>
@@ -249,24 +237,22 @@
                       <h6 class="mb-0">Skill</h6>
                     </div>
                     <div class="col-sm-9 text-secondary">
-                     {{grad_info.skill}} 
+                     {{grad_info.skill}}
                     </div>
-                  </div> 
+                  </div>
                 <div class="modal-footer">
-                    <button type="button" class="btn btn-primary" data-dismiss="modal">
-                       Close
-                    </button>
+                    <button class="red" type="button" data-dismiss = "modal"><i class="icon ion-md-lock"></i> Close</button>
             </div>
           </div>
-          {% endif %}
-          {% endif %}
 
-           {% endfor %}
+
+
         </form>
-        {% endif %}
+
       </div>
     </div>
-    
+
   </div>
+  {% endfor %}
 </div>
 {% endblock content %}
