--- a/graduatetracer/static/css/Display.css
+++ b/graduatetracer/static/css/Display.css
@@ -12,7 +12,7 @@
     color: #000;
     margin-bottom: -144px;
     margin-top: 62PX;
-    margin-left: 15px;
+    margin-left: 37px;
 }
 
 .pg-sub-title {
@@ -34,7 +34,7 @@
     background-position: center;
     overflow: hidden;
     position: relative;
-    margin: 10px auto;
+    margin: -11px auto;
     cursor: pointer;
     border-radius: 10px;
     margin-top: 112px;
@@ -95,73 +95,8 @@
 .profile-card-2:hover .profile-icons {
     right: 40px;
 }
-.bio-graph-heading {
-    background: #fbc02d;
-    color: #fff;
-    text-align: center;
-    font-style: italic;
-    padding: 40px 110px;
-    border-radius: 4px 4px 0 0;
-    -webkit-border-radius: 4px 4px 0 0;
-    font-size: 16px;
-    font-weight: 300;
-}
 
-.bio-graph-info {
-    color: black;
 
-}
-
-.bio-graph-info h1 {
-    font-size: 22px;
-    font-weight: 300;
-    margin: 0 0 20px;
-}
-
-.bio-row {
-    width: 50%;
-    float: left;
-    margin-bottom: 10px;
-    padding:0 15px;
-}
-
-.bio-row p span {
-    width: 100px;
-    display: inline-block;
-}
-
-.bio-chart, .bio-desk {
-    float: left;
-}
-
-.bio-chart {
-    width: 40%;
-}
-
-.bio-desk {
-    width: 60%;
-}
-
-.bio-desk h4 {
-    font-size: 15px;
-    font-weight:400;
-}
-
-.bio-desk h4.terques {
-    color: #4CC5CD;
-}
-
-.bio-desk h4.red {
-    color: #e26b7f;
-}
-
-.bio-desk h4.green {
-    color: #97be4b;
-}
-
-.bio-desk h4.purple {
-    color: #caa3da;
-}
 .button-24 {
   background: #da762e;
   border: 1px solid #f8f9fc;
@@ -179,6 +114,7 @@
   outline: 0;
   padding: 12px 14px;
   margin-left: -165px;
+  margin-top: 28px;
 }
 .button-24:hover,
 .button-24:active {
@@ -203,7 +139,7 @@
     margin-right: -400px;
     margin-top: -453px;
 }
-@media only screen and (max-width: 667px) {
+@media only screen and (max-width: 1129px) {
   
     .mb-3, .my-3 {
     background-image: linear-gradient(180deg, #f8f9fc 10%, transparent 100%);
@@ -213,7 +149,7 @@
     
 }
 .button-24 {
-  margin-left: 9px;
+  margin-left: auto;
 }
 .profile-card-2 {
     max-width: 300px;
