--- a/graduatetracer/tracer/templates/tracer/user/jobs_available.html
+++ b/graduatetracer/tracer/templates/tracer/user/jobs_available.html
@@ -1,5 +1,5 @@
 {%  extends 'tracer/user/template.html' %}
-{% block title %}Job Availbale{% endblock %}
+{% block title %}Jobs Available{% endblock %}
 {% load static %}
 {% load humanize %}
 
@@ -13,16 +13,13 @@
       display:none;
     }
 
-    .text-black{
-      color:black;
-    }
-
     .dataTables_wrapper{
       z-index: 0;
     }
     .dataTables_length{
       z-index: 2;
     }
+
     .dropdown-filter{
       top: 33px !important;
       position: relative;
@@ -32,17 +29,44 @@
     .dataTables_length{
       padding-bottom: 10px;
     }
+
+    label {
+      display: inline-block;
+      margin-bottom: 0.5rem;
+      margin-top: 1.5rem;
+    }
+
     .th-w-20{
       width:20% !important;
     }
     .th-w-10{
       width:10% !important;
     }
+    .btns {
+      background: -webkit-gradient(linear, left top, right top, from(#f29263), to(#ee5a6f));
+      background: linear-gradient(to right, #ee5a6f, #f29263);
+      border: none !important;
+      color: black !important;
+      padding: 8px 13px !important;
+      text-align: center !important;
+      font-size: 13px !important;
+      margin: 1px -2px !important;
+      transition: 0.3s !important;
+      font-weight: 600 !important;
+    }
+    .btns:hover {
+      background-color: #f29263 !important;
+      color: white !important;
+    }
 
-    label{
-      display: inline-block;
-      margin-bottom: 0.5rem;
-      margin-top: 1.5rem;
+    .eye{
+      border: none !important;
+      color: black !important;
+      transition: 0.5s !important;
+    }
+
+    .eye:hover {
+      background-color: #009fff !important;
     }
   </style>
 
@@ -59,17 +83,15 @@
 
 <div class="row">
   <div class="col-sm-auto col-md-auto col-lg-auto col-xl-auto m-auto pb-4">
-    <a href="#" class="btn bg-c-tile text-white shadow-lg" onclick="return show('Page1','Page2');"><h6>Tile View</h6></a>
+    <a href="#" class="btns bg-c-tile text-black shadow-lg" onclick="return show('Page1','Page2');">List View</a>
   </div>
   <div class="col-sm-auto col-md-auto col-lg-auto col-xl-auto m-auto pb-4">
-    <a href="#" class="btn bg-c-tile text-white shadow-lg" onclick="return show('Page2','Page1');"><h6>List View</h6></a>
+    <a href="#" class="btns bg-c-tile text-black shadow-lg" onclick="return show('Page2','Page1');">Tile View</a>
   </div>
-
-
 </div>
 
 
-<div id="Page2" class="container-fluid bg-white pr-4 pl-4 pb-3" style="display:none;">
+<div id="Page1" class="container-fluid bg-white pr-4 pl-4 pb-3">
   <div class="row ">
 
     <div class="row w-20">
@@ -156,13 +178,13 @@
               </td>
               <td option-table-wid>
                 <div class="text-center pr-0">
-                  <a class  data-toggle="modal" data-target="#bd-example-modal-lg1{{ ad.id }}"><i class="fas fa-eye"></i></a>
+                  <a class="eye"  data-toggle="modal" data-target="#bd-example-modal-lg1{{ ad.id }}" ><i class="fas fa-eye"></i></a>
                 </div>
               </td>
               <div class="modal fade" id="bd-example-modal-lg1{{ ad.id }}" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
                 <div class="modal-dialog modal-lg">
                   <div class="modal-content">
-                      <div class="card-header bg-c-ads text-white">
+                      <div class="card-header bg-c-ads text-white pb-3">
                         <div class="card-title h1 row pb-1">
                           <div class="col-12 h2 pl-2 pt-1">
                             {{ad.name}}{% if ad.job_category %} - {{ad.job_category}}{% endif %}
@@ -219,7 +241,7 @@
                             </cite>
                         </div>
                       </div>
-                    {% endif %}
+                      {% endif %}
                   </div>
                 </div>
               </div>
@@ -229,7 +251,8 @@
   </table>
 </div>
 
-<div id="Page1">
+<div id="Page2" class="none">
+
   <div class="row">
     <div class="rightcolumn">
       <div id="accordion">
@@ -245,7 +268,7 @@
                 {% for job_category in job_categories %}
                   {% if job_category %}
                   <div class="col-lg-12 p-2">
-                    <a href="{% url 'categorized_job' job_category.id %}" class="btn btn-block btn-outline-info">{{job_category.title}}</a>
+                    <a href="{% url 'categorized_jobs' job_category.id %}" class="btn btn-block btn-outline-info">{{job_category.title}}</a>
                   </div>
                   {% else %}
                   <div class="card-body">
@@ -268,7 +291,8 @@
                   src="{% static 'img/browse.svg' %}" alt="Browse-Visualizer">
           </div>
           <p>This feature helps you to view all the
-            posted jobs from latest to oldest.
+            posted jobs from latest to oldest. Every post has an option of
+            <span class="text-info">Update</span> and <span class="text-danger">Delete</span>.</p>
         </div>
       </div>
       <div class="card mb-4 mt-4 mr-2 ml-2 shadow-sm d-none d-lg-block">
@@ -280,8 +304,8 @@
           <hr>
           <p>Advertised: <span class="text-info">{{count_jobs_advertised}}</span></p>
           <p>Job Request: <span class="text-warning">{{count_job_requests}}</span></p>
-          <!-- <p>Employed: <span class="text-success">{{count_employed}}</span></p>
-          <p>Unemployed: <span class="text-danger">{{count_unemployed}}</span></p> -->
+          <p>Employed: <span class="text-success">{{count_employed}}</span></p>
+          <p>Unemployed: <span class="text-danger">{{count_unemployed}}</span></p>
         </div>
       </div>
     </div>
@@ -302,23 +326,6 @@
 
                 </div>
               </div>
-              <!-- <div class="ml-auto">
-                <div class="dropdown no-arrow">
-                    <a class="dropdown-toggle" href="#" role="button" id="dropdownMenuLink"
-                        data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                        <i class="fas fa-ellipsis-v fa-sm fa-fw text-white"></i>
-                    </a>
-                    <div class="dropdown-menu dropdown-menu-right shadow animated--fade-in"
-                        aria-labelledby="dropdownMenuLink">
-                        <div class="dropdown-header">Options</div>
-                        <a class="dropdown-item text-info" href="{% url 'update_ad' ad.id %}"><i class="mr-2 fas fa-wrench"></i>Update</a>
-                        <form method="post" action="{% url 'delete_ad' ad.id %}" >
-                          {% csrf_token %}
-                          <button type="submit" class="dropdown-item text-danger"><i class="mr-2 fas fa-trash-alt"></i>Delete</button>
-                        </form>
-                    </div>
-                </div>
-              </div> -->
             </div>
           </div>
         </div>
