--- a/graduatetracer/tracer/templates/tracer/admin/display_announcements.html
+++ b/graduatetracer/tracer/templates/tracer/admin/display_announcements.html
@@ -16,14 +16,33 @@
                 </div>
               </div>
             </div>
-            <!-- <div class="ml-auto">
+            <div class="ml-auto">
               <div class="dropdown no-arrow">
                   <a class="dropdown-toggle" href="#" role="button" id="dropdownMenuLink"
                       data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                       <i class="fas fa-ellipsis-v fa-sm fa-fw text-white"></i>
                   </a>
+                  <div class="dropdown-menu dropdown-menu-right shadow animated--fade-in"
+                      aria-labelledby="dropdownMenuLink">
+                      <div class="dropdown-header">Options</div>
+                      <a class="dropdown-item text-info" href="{% url 'update_announcement' announcement.id %}"><i class="mr-2 fas fa-wrench"></i>Update</a>
+                      <a class="dropdown-item text-danger" data-toggle="modal" data-target="#exampleModalCenter{{ announcement.id }}"><i class="mr-2 fas fa-trash-alt"></i>Delete</a>
+                  </div>
               </div>
-            </div> -->
+            </div>
+            <div class="modal fade" id="exampleModalCenter{{ announcement.id }}" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+              <div class="modal-dialog modal-dialog-centered" role="document">
+                <div class="modal-content">
+                  <div class="modal-body text-black">
+                    <h3><span>Are you sure you want to DELETE this Announcement ?</span></h3>
+                  </div>
+                  <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
+                    <a href="{% url 'delete_announcement' announcement.id %}" class="btn btn-danger">Confirm Delete</a>
+                  </div>
+                </div>
+              </div>
+            </div>
           </div>
         </div>
       </div>
