--- a/graduatetracer/tracer/templates/tracer/user/DisplayInfo.html
+++ b/graduatetracer/tracer/templates/tracer/user/DisplayInfo.html
@@ -53,6 +53,15 @@
                         <hr>
                         <div class="row">
                           <div class="col-sm-3">
+                            <h6 class="mb-0">Year Graduated</h6>
+                          </div>
+                          <div class="col-sm-9 text-secondary">
+                            {{user.date_graduated}}
+                          </div>
+                        </div>
+                        <hr>
+                        <div class="row">
+                          <div class="col-sm-3">
                             <h6 class="mb-0">Phone</h6>
                           </div>
                           <div class="col-sm-9 text-secondary">
